--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,36 +1,42 @@
-name: Update internships
+name: Update Internships
 
 on:
   schedule:
-    - cron: "0 */6 * * *"
-  workflow_dispatch:
+    # Runs every day at 08:00 UTC
+    - cron: '0 8 * * *'
+  workflow_dispatch:  # allows manual trigger
 
 jobs:
-  build:
+  update:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      # 1. Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
+      # 2. Set up Python
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: '3.11'
 
-      - name: Install deps
-        run: pip install requests beautifulsoup4
-    
-      - name: Install Playwright
-        run: |
-          pip install playwright
-          playwright install
+      # 3. Install dependencies
+      - name: Install dependencies
+        run: pip install requests
 
-      - name: Run scraper
+      # 4. Run the update script
+      - name: Update internships
         run: python update.py
 
-      - name: Commit changes
+      # 5. Commit and push updated HTML and cache
+      - name: Commit updated files
         run: |
           git config user.name "github-actions"
-          git config user.email "actions@github.com"
-          git add index.html
-          git commit -m "Update internships" || exit 0
+          git config user.email "github-actions@users.noreply.github.com"
+          git add index.html jobs_cache.json
+          git commit -m "Update internships"
           git push
+        env:
+          # Use a GitHub token to allow push
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
