--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,7 +2,7 @@ name: Update Internships
 
 on:
   schedule:
-    # Runs every day at 08:00 UTC
+    # Run every day at 08:00 UTC (adjust as needed)
     - cron: '0 8 * * *'
   workflow_dispatch:  # allows manual trigger
 
@@ -11,32 +11,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout the repository
+      # 1️⃣ Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Set up Python
+      # 2️⃣ Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      # 3. Install dependencies
-      - name: Install dependencies
-        run: pip install requests
+      # 3️⃣ Install Playwright
+      - name: Install Playwright
+        run: |
+          pip install playwright
+          playwright install
 
-      # 4. Run the update script
+      # 4️⃣ Run your scraper script
       - name: Update internships
         run: python update.py
 
-      # 5. Commit and push updated HTML and cache
-      - name: Commit updated files
+      # 5️⃣ Commit and push updated HTML
+      - name: Commit updated index.html
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
-          git add index.html jobs_cache.json
-          git commit -m "Update internships"
+          git add index.html
+          git diff --cached --quiet || git commit -m "Update internships"
           git push
         env:
-          # Use a GitHub token to allow push
+          # Use the built-in GitHub token to allow push
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
