--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,30 +2,32 @@ name: Update Internship Listings
 
 on:
   schedule:
-    - cron: "0 */3 * * *"
-  workflow_dispatch:
+    - cron: "0 */3 * * *"  # every 3 hours
+  workflow_dispatch:        # allows manual trigger
 
 jobs:
   update:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
       - name: Install dependencies
         run: pip install requests
 
-      - name: Update README
+      - name: Update README and history
         run: python scripts/update_readme.py
 
       - name: Commit changes
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add README.md
-          git commit -m "Auto-update internships" || exit 0
+          git add README.md data/history.json
+          git commit -m "Auto-update internships" || echo "No changes to commit"
           git push
